samples/_failures_safe/1761145137_020ca9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b21910c.c: In function ‘main’:
./samples/SAFE/__tmp_8b21910c.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_8b21910c.c:153:9: error: expected declaration or statement at end of input
